--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/cstlogo"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppThemeNoHome">
         <activity
             android:name=".SplashActivity"
             android:theme="@style/SplashTheme">
@@ -18,8 +18,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Home"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
+        </activity>
 
-        <activity android:name=".Home" >
+        <activity
+            android:name=".maintain"
+            android:label="Maintenance Registration"
+            android:parentActivityName=".Home">
+        </activity>
+
+        <activity
+            android:name=".register"
+            android:label="Create Your Account">
         </activity>
     </application>
 
