--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,20 +24,27 @@
             android:name=".Home"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            android:windowSoftInputMode="adjustResize"></activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".maintain"
             android:label="Maintenance Registration"
-            android:parentActivityName=".Home"></activity>
+            android:parentActivityName=".Home" />
         <activity
             android:name=".register"
-            android:label="Create Your Account"></activity>
+            android:label="Create Your Account" />
+        <activity
+            android:name=".Feedback"
+            android:label="Feedback"
+            android:parentActivityName=".Home" />
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".Feedback"></activity>
+        <activity android:name=".About" />
+        <activity android:name=".Share" />
+        <activity android:name=".Help" />
+        <activity android:name=".Rate"></activity>
     </application>
 
 </manifest>
