--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,10 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".About" />
+        <activity
+            android:name=".About"
+            android:label="About Us"
+            android:parentActivityName=".Home" />
         <activity android:name=".Share" />
         <activity android:name=".Help" />
         <activity android:name=".Rate"></activity>
