Attendance trackinhg module added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,13 @@
         <activity android:name=".About" />
         <activity android:name=".Share" />
         <activity android:name=".Help" />
-        <activity android:name=".Rate"></activity>
+        <activity android:name=".Rate" />
+        <activity
+            android:name=".Attendance"
+            android:label="Attendance Tracking"
+            android:parentActivityName=".Home">
+
+        </activity>
     </application>
 
 </manifest>
