--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,9 @@
             android:label="About Us"
             android:parentActivityName=".Home" />
         <activity android:name=".Share" />
-        <activity android:name=".Help" />
+        <activity android:name=".Help"
+            android:label="Help"
+            android:parentActivityName=".Home"/>
         <activity android:name=".Rate" />
         <activity
             android:name=".Attendance"
