attendance tracking coming up

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,8 +55,14 @@
         <activity
             android:name=".AddModule"
             android:label="Add Module"
-            android:parentActivityName=".Attendance"></activity>
-        <activity android:name=".UpdateModule"></activity>
+            android:parentActivityName=".Attendance">
+        </activity>
+
+        <activity
+            android:name=".UpdateModule"
+            android:label="Update Module"
+            android:parentActivityName=".Attendance">
+        </activity>
     </application>
 
 </manifest>
