--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,18 +16,19 @@
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".Home"
-            android:theme="@style/AppTheme"
+            android:theme="@style/HomeTheme"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".maintain"
-            android:label="Maintenance Registration"
-            android:parentActivityName=".Home" />
+            android:noHistory="true"
+            android:theme="@style/AppThemeNoHome"
+            android:parentActivityName=".Home"
+            android:label="Maintenance Registration" />
         <activity
             android:name=".register"
             android:label="Create Your Account" />
@@ -44,12 +45,10 @@
             android:name=".About"
             android:label="About Us"
             android:parentActivityName=".Home" />
-        <activity android:name=".Share" />
         <activity
             android:name=".Help"
             android:label="Help"
             android:parentActivityName=".Home" />
-        <activity android:name=".Rate" />
         <activity
             android:name=".Attendance"
             android:label="Attendance Tracking"
@@ -66,7 +65,7 @@
             android:name=".TimeTable"
             android:label="Time Table"
             android:parentActivityName=".Home"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/HomeTheme" />
         <activity
             android:name=".SettingsActivity"
             android:parentActivityName=".TimeTable"
