--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
 
         <activity
             android:name=".About"
-            android:label="About Us"
+            android:label="About"
             android:parentActivityName=".Home" />
         <activity android:name=".Share" />
         <activity android:name=".Help"
